--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="utf-8">
-    <title>تفعيل PS4 | GoldHEN</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        @font-face {
-            font-family: 'logging';
-            src: url('fonts/LiberationMono-Regular.ttf');
-        }
-        #console {
-            font-family: 'logging';
-        }
-    </style>
-</head>
-<body>
-    <div id="overlay">
-        <div class="title">جاري تهكير يا زعيمنا</div>
-        <div class="name">سالم الحارثي</div>
-        <div class="footer">الأفضل دائماً</div>
-        <br><br>
-        <div id="console">...جاري تحميل التفعيل</div>
-    </div>
+<!-- Copyright (C) 2023-2025 anonymous
 
-    <!-- سكربتات التفعيل -->
+This file is part of PSFree.
+
+PSFree is free software: you can redistribute it and/or modify
+it under the terms of the GNU Affero General Public License as
+published by the Free Software Foundation, either version 3 of the
+License, or (at your option) any later version.
+
+PSFree is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU Affero General Public License for more details.
+
+You should have received a copy of the GNU Affero General Public License
+along with this program.  If not, see <https://www.gnu.org/licenses/>.
+-->
+<html>
+    <head>
+        <meta charset='utf-8'>
+        <title>PSFree-Lapse Exploit For 9.00</title>
+        <style>
+            @font-face {
+                font-family: 'logging';
+                src: url('fonts/LiberationMono-Regular.ttf');
+            }
+            #console {
+                font-family: 'logging';
+            }
+        </style>
+    </head>
+    <body>
+        PSFree: ثغرة لتفعيل كيرنل 9.00 على PS4<br>
+        تم التعديل بواسطة: سالم الحارثي | SALMXD<br>
+        لدعم المطور XMR:<br>
+        86Fk3X9AE94EGKidzRbvyiVgGNYD3qZnuKNq1ZbsomFWXHYm6TtAgz9GNGitPWadkS3Wr9uXoT29U1SfdMtJ7QNKQpW1CVS<br>
+        لمشاهدة معلومات الرخصة والكود: <a href='./about.html' data-jslicense='1'>اضغط هنا</a><br>
+        <pre id='console'></pre>
+    </body>
     <script src="payload.js"></script>
-    <script type="module" src="alert.mjs"></script>
-</body>
+    <script type='module' src='./alert.mjs'></script>
 </html>
