--- a/index.html
+++ b/index.html
@@ -15,28 +15,60 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
-<html>
-    <head>
-        <meta charset='utf-8'>
-        <title>PSFree-Lapse Exploit For 9.00</title>
-        <style>
-            @font-face {
-                font-family: 'logging';
-                src: url('fonts/LiberationMono-Regular.ttf');
-            }
-            #console {
-                font-family: 'logging';
-            }
-        </style>
-    </head>
-    <body>
-        PSFree: ثغرة لتفعيل كيرنل 9.00 على PS4<br>
-        تم التعديل بواسطة: سالم الحارثي | SALMXD<br>
-        لدعم المطور XMR:<br>
-        86Fk3X9AE94EGKidzRbvyiVgGNYD3qZnuKNq1ZbsomFWXHYm6TtAgz9GNGitPWadkS3Wr9uXoT29U1SfdMtJ7QNKQpW1CVS<br>
-        لمشاهدة معلومات الرخصة والكود: <a href='./about.html' data-jslicense='1'>اضغط هنا</a><br>
-        <pre id='console'></pre>
-    </body>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="utf-8">
+    <title>PSFree-Lapse Exploit For 9.00</title>
+    <style>
+        @font-face {
+            font-family: 'logging';
+            src: url('fonts/LiberationMono-Regular.ttf');
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'logging', monospace;
+            background: url('img.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: white;
+            text-align: center;
+            direction: rtl;
+        }
+
+        a {
+            color: #00ffcc;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        #console {
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 15px;
+            margin: 20px;
+            font-size: 16px;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
+    </style>
+</head>
+<body>
+    <h1>PSFree: ثغرة لتفعيل كيرنل 9.00 على PS4</h1>
+    <p>تم التعديل بواسطة: سالم الحارثي | SALMXD</p>
+    <p>لدعم المطور XMR:</p>
+    <p style="word-break: break-all;">
+        86Fk3X9AE94EGKidzRbvyiVgGNYD3qZnuKNq1ZbsomFWXHYm6TtAgz9GNGitPWadkS3Wr9uXoT29U1SfdMtJ7QNKQpW1CVS
+    </p>
+    <p>
+        لمشاهدة معلومات الرخصة والكود: 
+        <a href="./about.html" data-jslicense="1">اضغط هنا</a>
+    </p>
+    <pre id="console"></pre>
+
     <script src="payload.js"></script>
-    <script type='module' src='./alert.mjs'></script>
+    <script type="module" src="./alert.mjs"></script>
+</body>
 </html>
