--- a/index.html
+++ b/index.html
@@ -1,74 +1,43 @@
 <!-- Copyright (C) 2023-2025 anonymous
 
-This file is part of PSFree.
+هذا الملف جزء من PSFree.
 
-PSFree is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License as
-published by the Free Software Foundation, either version 3 of the
-License, or (at your option) any later version.
+PSFree هو برنامج حر: يمكنك إعادة توزيعه و/أو تعديله
+بموجب رخصة GNU Affero العامة كما نشرتها مؤسسة البرمجيات الحرة،
+إما الإصدار 3 أو (حسب اختيارك) أي إصدار لاحق.
 
-PSFree is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details.
-
-You should have received a copy of the GNU Affero General Public License
-along with this program.  If not, see <https://www.gnu.org/licenses/>.
+يتم توزيع PSFree على أمل أن يكون مفيدًا،
+ولكن بدون أي ضمان؛ حتى بدون ضمان ضمني لقابلية التسويق أو الملاءمة لغرض معين.
+لمزيد من التفاصيل، راجع <https://www.gnu.org/licenses/>.
 -->
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="utf-8">
-    <title>PSFree-Lapse Exploit For 9.00</title>
+    <title>PSFree - ثغرة كيرنل 9.00</title>
     <style>
         @font-face {
             font-family: 'logging';
             src: url('fonts/LiberationMono-Regular.ttf');
         }
-
         body {
-            margin: 0;
-            padding: 0;
             font-family: 'logging', monospace;
-            background: url('img.jpg') no-repeat center center fixed;
-            background-size: cover;
-            color: white;
-            text-align: center;
+            background-color: #000;
+            color: #fff;
+            padding: 20px;
             direction: rtl;
         }
-
         a {
-            color: #00ffcc;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        #console {
-            background-color: rgba(0, 0, 0, 0.6);
-            padding: 15px;
-            margin: 20px;
-            font-size: 16px;
-            white-space: pre-wrap;
-            word-wrap: break-word;
+            color: #00a8ff;
         }
     </style>
 </head>
 <body>
-    <h1>PSFree: ثغرة لتفعيل كيرنل 9.00 على PS4</h1>
-    <p>تم التعديل بواسطة: سالم الحارثي | SALMXD</p>
-    <p>لدعم المطور XMR:</p>
-    <p style="word-break: break-all;">
-        86Fk3X9AE94EGKidzRbvyiVgGNYD3qZnuKNq1ZbsomFWXHYm6TtAgz9GNGitPWadkS3Wr9uXoT29U1SfdMtJ7QNKQpW1CVS
-    </p>
-    <p>
-        لمشاهدة معلومات الرخصة والكود: 
-        <a href="./about.html" data-jslicense="1">اضغط هنا</a>
-    </p>
+    PSFree: سلسلة ثغرات لأجهزة PS4/PS5<br>
+    التبرع (XMR / مونيرو):<br>
+    86Fk3X9AE94EGKidzRbvyiVgGNYD3qZnuKNq1ZbsomFWXHYm6TtAgz9GNGitPWadkS3Wr9uXoT29U1SfdMtJ7QNKQpW1CVS<br>
+    لمشاهدة معلومات الرخصة والكود البرمجي: <a href="./about.html" data-jslicense="1">اضغط هنا</a><br>
     <pre id="console"></pre>
-
-    <script src="payload.js"></script>
-    <script type="module" src="./alert.mjs"></script>
 </body>
+<script src="payload.js"></script>
+<script type="module" src="./alert.mjs"></script>
 </html>
