--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <!-- Copyright (C) 2023-2025 anonymous
 
-هذا الملف جزء من PSFree.
+This file is part of PSFree.
 
-PSFree هو برنامج حر: يمكنك إعادة توزيعه و/أو تعديله
-بموجب رخصة GNU Affero العامة كما نشرتها مؤسسة البرمجيات الحرة،
-إما الإصدار 3 أو (حسب اختيارك) أي إصدار لاحق.
+PSFree is free software: you can redistribute it and/or modify
+it under the terms of the GNU Affero General Public License as
+published by the Free Software Foundation, either version 3 of the
+License, or (at your option) any later version.
 
-يتم توزيع PSFree على أمل أن يكون مفيدًا،
-ولكن بدون أي ضمان؛ حتى بدون ضمان ضمني لقابلية التسويق أو الملاءمة لغرض معين.
-لمزيد من التفاصيل، راجع <https://www.gnu.org/licenses/>.
+PSFree is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU Affero General Public License for more details.
+
+You should have received a copy of the GNU Affero General Public License
+along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="utf-8">
-    <title>PSFree - ثغرة كيرنل 9.00</title>
-    <style>
-        @font-face {
-            font-family: 'logging';
-            src: url('fonts/LiberationMono-Regular.ttf');
-        }
-        body {
-            font-family: 'logging', monospace;
-            background-color: #000;
-            color: #fff;
-            padding: 20px;
-            direction: rtl;
-        }
-        a {
-            color: #00a8ff;
-        }
-    </style>
-</head>
-<body>
-    PSFree: سلسلة ثغرات لأجهزة PS4/PS5<br>
-    التبرع (XMR / مونيرو):<br>
-    86Fk3X9AE94EGKidzRbvyiVgGNYD3qZnuKNq1ZbsomFWXHYm6TtAgz9GNGitPWadkS3Wr9uXoT29U1SfdMtJ7QNKQpW1CVS<br>
-    لمشاهدة معلومات الرخصة والكود البرمجي: <a href="./about.html" data-jslicense="1">اضغط هنا</a><br>
-    <pre id="console"></pre>
-</body>
-<script src="payload.js"></script>
-<script type="module" src="./alert.mjs"></script>
+<html>
+    <head>
+        <meta charset='utf-8'>
+        <title>تهكير بدون فلاش 9.00</title>
+        <style>
+            @font-face {
+                font-family: 'logging';
+                src: url('fonts/LiberationMono-Regular.ttf');
+            }
+            #console {
+                font-family: 'logging';
+            }
+        </style>
+    </head>
+    <body>
+        PSFree: الاستقرار 100%<br>
+        Donation (Monero/XMR):<br>
+        86Fk3X9AE94EGKidzRbvyiVgGNYD3qZnuKNq1ZbsomFWXHYm6TtAgz9GNGitPWadkS3Wr9uXoT29U1SfdMtJ7QNKQpW1CVS<br>
+        See <a href='./about.html' data-jslicense='1'>JavaScript license information</a> for the
+        source code and license.<br>
+        <pre id='console'></pre>
+    </body>
+    <script src="payload.js"></script>
+    <script type='module' src='./alert.mjs'></script>
 </html>
