--- a/lndex.html
+++ b/lndex.html
@@ -71,7 +71,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1><span class="brand-number">4</span><span class="brand-text">GAMER</span> المضيف الجديد PSFREE بدون فلاش 9.00</h1>
+            <h1><span class="brand-number">KSA</span><span class="brand-text">SALMXD</span> المضيف الجديد PSFREE بدون فلاش 9.00</h1>
         </div>
         
         <div id='console'></div>
