--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <button onclick="showlinuxpayloads()">Linux</button>
       </nav>
       <div id="payloads-tools" style="display: block;">
-        <h2 id="tools">Tools</h2>
+        <h2 id="tools">ادوات</h2>
           <div id="button-container">
             <!--<button data-func="HEN">HEN</button>-->
             <button id="binloader">Bin-Loader</button>
@@ -55,7 +55,7 @@
             <button data-func="load_KernelDumper">Kernel-Dumper</button>
             <button data-func="load_VTXDumper">PS4-Dumper-VTX</button>
             <button data-func="load_App2USB">App2USB</button>
-            <button data-func="load_DisableUpdates">Disable-Updates</button>
+            <button data-func="load_ايقاف_التحديثات">Disable-Updates</button>
             <button data-func="load_EnableUpdates">Enable-Updates</button>
             <button data-func="load_FTP">FTP</button>
             <button data-func="load_HistoryBlocker">History-Blocker</button>
@@ -78,7 +78,7 @@
           </div>
       </div>
       <div id="payloads-game" style="display: none;">
-        <h2 id="tools">Game</h2>
+        <h2 id="tools"مودات_العاب</h2>
           <div id="button-container">
             <button data-func="load_GTAArbic">GTAV-ArabicGuy-1.27</button>
             <button data-func="load_GTAArbic3">GTAV-ArabicGuy-1.32</button>
@@ -96,7 +96,7 @@
             <button data-func="load_Oysters124">RDR2-OystersMenu-1.29</button>
           </div>
       </div>
-      <div id="payloads-linux" style="display: none;">
+      <div id="payloads-لينكس" style="display: none;">
           <h2 id="tools">Linux</h2>
           <div id="button-container">
             <button data-func="load_Linux">Linux-1GB</button>
