--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     
     <div id="payloads-page" style="display: none;">
       <nav class="floating-menu-payloads">
-        <button onclick="showtoolspayloads()">Tools</button>
-        <button onclick="showgamepayloads()">Games</button>
-        <button onclick="showlinuxpayloads()">Linux</button>
+        <button onclick="showtoolspayloads()">ادوات</button>
+        <button onclick="showgamepayloads()">مودات</button>
+        <button onclick="showlinuxpayloads()">لينكس</button>
       </nav>
       <div id="payloads-tools" style="display: block;">
-        <h2 id="tools">Tools</h2>
+        <h2 id="tools">ادوات</h2>
           <div id="button-container">
             <!--<button data-func="HEN">HEN</button>-->
             <button id="binloader">Bin-Loader</button>
@@ -78,7 +78,7 @@
           </div>
       </div>
       <div id="payloads-game" style="display: none;">
-        <h2 id="tools">Game</h2>
+        <h2 id="tools">مودات</h2>
           <div id="button-container">
             <button data-func="load_GTAArbic">GTAV-ArabicGuy-1.27</button>
             <button data-func="load_GTAArbic3">GTAV-ArabicGuy-1.32</button>
@@ -97,7 +97,7 @@
           </div>
       </div>
       <div id="payloads-linux" style="display: none;">
-          <h2 id="tools">Linux</h2>
+          <h2 id="tools">لينكس</h2>
           <div id="button-container">
             <button data-func="load_Linux">Linux-1GB</button>
             <button data-func="load_Linux2gb">Linux-2GB</button>
