--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <button data-func="load_KernelDumper">Kernel-Dumper</button>
             <button data-func="load_VTXDumper">PS4-Dumper-VTX</button>
             <button data-func="load_App2USB">App2USB</button>
-            <button data-func="load_DisableUpdates">Disable-Updates</button>
+            <button data-func="load_DisableUpdates">تعطيل التحديثات التلفائيه</button>
             <button data-func="load_EnableUpdates">Enable-Updates</button>
             <button data-func="load_FTP">FTP</button>
             <button data-func="load_HistoryBlocker">History-Blocker</button>
