--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
     
     <div id="payloads-page" style="display: none;">
       <nav class="floating-menu-payloads">
-        <button onclick="showtoolspayloads()">ادوات</button>
-        <button onclick="showgamepayloads()">مودات العاب</button>
-        <button onclick="showlinuxpayloads()">لينكس</button>
+        <button onclick="showtoolspayloads()">Tools</button>
+        <button onclick="showgamepayloads()">Games</button>
+        <button onclick="showlinuxpayloads()">Linux</button>
       </nav>
       <div id="payloads-tools" style="display: block;">
-        <h2 id="tools">ادوات</h2>
+        <h2 id="tools">Tools</h2>
           <div class="button-container" id="button-container">
             <button id="binloader">Bin-Loader</button>
             <button data-func="load_AppDumper">App-Dumper</button>
             <button data-func="load_KernelDumper">Kernel-Dumper</button>
             <button data-func="load_VTXDumper">PS4-Dumper-VTX</button>
             <button data-func="load_App2USB">App2USB</button>
-            <button data-func="load_DisableUpdates">تعطيل التحديثات مهم</button>
+            <button data-func="load_DisableUpdates">ايقاف التحديثات</button>
             <button data-func="load_FTP">FTP</button>
             <button data-func="load_HistoryBlocker">History-Blocker</button>
             <button data-func="load_KernelClock">Kernel-Clock</button>
@@ -72,7 +72,7 @@
           </div>
       </div>
       <div id="payloads-game" style="display: none;">
-        <h2 id="tools">مودات العاب</h2>
+        <h2 id="tools">Game</h2>
           <div class="button-container" id="button-container">
             <button data-func="load_GTAArbic">GTAV-ArabicGuy-1.27</button>
             <button data-func="load_GTAArbic3">GTAV-ArabicGuy-1.32</button>
@@ -91,7 +91,7 @@
           </div>
       </div>
       <div id="payloads-linux" style="display: none;">
-          <h2 id="tools">لينكس</h2>
+          <h2 id="tools">Linux</h2>
           <div class="button-container" id="button-container">
             <button data-func="load_Linux">Linux-1GB</button>
             <button data-func="load_Linux2gb">Linux-2GB</button>
