--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         function DisplayCacheProgress(){setTimeout(function(){;document.title="Cache Success !";},1000);setTimeout(function(){window.location.href = document.referrer;},3000);}window.applicationCache.addEventListener("progress",DLProgress,false);window.applicationCache.oncached=function(e){DisplayCacheProgress();};window.applicationCache.onupdateready=function(e){DisplayCacheProgress();};
     </script>
     <meta charset="UTF-8">
-    <title>PSFree | 9.00</title>
+    <title>PSFree</title>
     <link rel='stylesheet' href='./css/index.css'>
   </head>
   <body>
@@ -33,6 +33,9 @@
           <!-- PlayStation SVG logo -->
           <svg viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M0.69116 21.9548C-0.506476 22.7935 -0.284724 24.2384 2.44769 25.1419C5.18011 26.0455 8.35603 26.2323 11.1505 25.729C11.0707 25.729 11.3102 25.729 11.1505 25.729V22.8774L8.43588 23.8C7.39792 24.1355 6.35997 24.2194 5.32202 23.9677C4.5236 23.7161 4.68328 23.2129 5.64139 22.7935L11.1505 20.7806V17.6774L3.48565 20.4452C2.52754 20.7806 1.56943 21.2839 0.69116 21.9548ZM19.2146 9.37419V17.5097C22.4881 19.1871 25.0431 17.5097 25.0431 13.1484C25.0431 8.70323 23.5261 6.69032 19.1348 5.09677C16.8193 4.25806 14.4241 3.50323 12.0288 3V27.2387L17.6178 29V8.61935C17.6178 7.69677 17.6178 7.02581 18.2565 7.27742C19.1348 7.52903 19.2146 8.45161 19.2146 9.37419ZM29.5941 20.0258C27.2787 19.1871 24.8036 18.8516 22.4083 19.1032C21.0779 19.1906 19.8294 19.5869 18.5759 20.0258V23.2968L23.7656 21.2839C24.8036 20.9484 25.8415 20.8645 26.8795 21.1161C27.6779 21.3677 27.5182 21.871 26.5601 22.2903L18.5759 25.3935V28.5806L29.5941 24.3032C30.3925 23.9677 31.1111 23.5484 31.7499 22.8774C32.3088 22.0387 32.0692 20.8645 29.5941 20.0258Z"></path> </g></svg>
         </button>
+      </div>
+      <div class="loader" id="loader" style="display: none;">
+        <div class="loader-circle"></div>
       </div>
     </div>
     
@@ -114,8 +117,10 @@
     <div class="overlay" id="overlay-popup"></div>
     <div class="popup" id="about-popup">
       <h2>About PSFree</h2>
-      <p>Version: 1.5.0</p>
-      <p>A simple web interface for PS4 jailbreak.</p>
+      <div>
+        <p>Version: 1.5.1</p>
+        <p>A simple web interface for PS4 jailbreak.</p>
+      </div>
       <button  onclick="closeabout()" class="close-btn" id="close-about">Close</button>
     </div>
 
@@ -123,22 +128,54 @@
     <div class="overlay" id="overlay-popup"></div>
     <div class="popup" id="settings-popup">
       <h2>Settings PSFree</h2>
-      <p>PS4 firmware supported:</p>
-      <p>- 9.00</p>
-      <p>Choose you'r flavor :</p>
-      <label>
-        <input type="radio" name="hen" value="GoldHEN" onchange="savejbflavor(); choosejb('GoldHEN')"> GoldHEN
-      </label>
-      <label>
-        <input type="radio" name="hen" value="HEN" onchange="savejbflavor(); choosejb('HEN')"> HEN
-      </label>
-      <label id="autojbchkb">
-        <input type="checkbox" id="ckbaj" />
-        <p id="agtext">Auto-Jailbreak</p>
-      </label>
-      <button  onclick="closesettings()" class="close-btn" id="close-settings">Close</button>
-    </div>
 
+      <div id="PS4FWOK">
+        <h3>PS4 Firmwares supported</h3>
+        <div id="listfw">
+          <p>7.00</p>
+          <p>7.01</p>
+          <p>7.02</p>
+          <p>7.50</p>
+          <p>7.51</p>
+          <p>7.55</p>
+          <p>8.00</p>
+          <p>8.01</p>
+          <p>8.03</p>
+          <p>8.50</p>
+          <p>8.52</p>
+          <p>9.00</p>
+          <p>9.03</p>
+          <p>9.04</p>
+          <p>9.50</p>
+          <p>9.51</p>
+          <p>9.60</p>
+        </div>
+        
+      </div>
+
+      <div id="choosejb">
+        <h3>Choose your flavor</h3>
+        <div class="radio-group">
+          <label>
+            <input type="radio" name="hen" value="GoldHEN" onchange="savejbflavor(); choosejb('GoldHEN')"> GoldHEN
+          </label>
+          <label>
+            <input type="radio" name="hen" value="HEN" onchange="savejbflavor(); choosejb('HEN')"> HEN
+          </label>
+        </div>
+        <label id="autojbchkb">
+          <input type="checkbox" id="ckbaj" />
+          <p id="agtext">Auto-Jailbreak</p>
+        </label>
+        <label id="debugconsolechkb">
+          <input type="checkbox" id="ckbdc" checked />
+          <p id="agtext">Enable Debug Console</p>
+        </label>
+      </div>
+
+      <button onclick="closesettings()" class="close-btn" id="close-settings">Close</button>
+      <!--<button data-func="load_AppCache" class="install-psfrl" id="install-psfrl">Install PSFree-Lite</button>-->
+    </div>
     <script src='./js/index.js'></script>
   </body>
 </html>
