--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ function generateJSON(){
     version:document.getElementById('version').value.trim(),
     process:"eboot.bin",
     mods:mods,
-    credits:["سالم الحارثي"]
+    credits:["Rocks D Xebec"]
   };
   const json=JSON.stringify(data,null,2);
   document.getElementById('output').textContent=json;
